[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-intelligence-env"
version = "1.0.0"
description = "Decision Intelligence Environment for OpenEnv Hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openenv-core>=0.2.0",
]

[project.scripts]
inference = "inference:main"
openenv-server = "server.app:main"

[tool.openenv]
api_version = "1.0"