[project]
name = "my-openenv-env"
version = "0.1.0"
description = "My OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "openenv-core",
]

[project.scripts]
myenv-server = "myenv.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"