[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-intelligence-env"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"